--- a/.vale.ini
+++ b/.vale.ini
@@ -6,21 +6,26 @@ StylesPath = styles
 # Levels include: suggestion, warning, and error
 MinAlertLevel = suggestion
 
+Packages = Google
+
+Vocab = BrandNames
+
 # Global settings (applied to all file types)
 [*]
 BasedOnStyles = Vale, Custom
 
+Google.Contractions = NO
 # Markdown files
 [*.{md,mdown,markdown,markdn}]
-BasedOnStyles = Vale, Custom, Google, Readability
+BasedOnStyles = Vale, Custom, Google
 
 # HTML files
 [*.{html,htm,shtml,xhtml}]
-BasedOnStyles = Vale, Custom, Google, Readability
+BasedOnStyles = Vale, Custom, Google
 
 # Code files
 [*.{c,h,cs,csx,cpp,cc,cxx,hpp,go,hs,java,bsh,js,jl,less,lua,pl,pm,pod,php,ps1,proto,py,py3,pyw,pyi,rpy,r,R,rb,rs,sass,scala,sbt,swift,ts,tsx}]
-BasedOnStyles = Custom, Google
+BasedOnStyles = Vale, Custom, Google
 CommentOnly = true
 
 # For ignoring specific directories
