--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3'
 services:
   vale:
     image: jdkato/vale:latest
+    platform: linux/amd64
     volumes:
       - .:/work
     working_dir: /work
