--- a/.vale.ini
+++ b/.vale.ini
@@ -12,20 +12,20 @@ Vocab = BrandNames
 
 # Global settings (applied to all file types)
 [*]
-BasedOnStyles = Vale, Custom
+BasedOnStyles = Vale, Custom, proselint
 
 Google.Contractions = NO
 # Markdown files
 [*.{md,mdown,markdown,markdn}]
-BasedOnStyles = Vale, Custom, Google
+BasedOnStyles = Vale, Custom, Google, proselint
 
 # HTML files
 [*.{html,htm,shtml,xhtml}]
-BasedOnStyles = Vale, Custom, Google
+BasedOnStyles = Vale, Custom, Google, proselint
 
 # Code files
 [*.{c,h,cs,csx,cpp,cc,cxx,hpp,go,hs,java,bsh,js,jl,less,lua,pl,pm,pod,php,ps1,proto,py,py3,pyw,pyi,rpy,r,R,rb,rs,sass,scala,sbt,swift,ts,tsx}]
-BasedOnStyles = Vale, Custom, Google
+BasedOnStyles = Vale, Custom, Google, proselint
 CommentOnly = true
 
 # For ignoring specific directories
