--- a/styles/Custom/WATonomous.yml
+++ b/styles/Custom/WATonomous.yml
@@ -1,9 +1,10 @@
 extends: existence
 message: "Use either 'WATonomous' or 'watonomous' for correct brand capitalization."
 level: error
-ignorecase: true
 tokens:
-  - '(?i)wat ?onomous'
+  - '(?i)wat ?onomous(?!(''s|\b))'
 exceptions:
   - WATonomous
   - watonomous
+  - WATonomous's
+  - watonomous's
