added write-good package

--- a/.vale.ini
+++ b/.vale.ini
@@ -6,26 +6,26 @@ StylesPath = styles
 # Levels include: suggestion, warning, and error
 MinAlertLevel = suggestion
 
-Packages = Google
+Packages = Google, proselint, write-good
 
 Vocab = BrandNames
 
 # Global settings (applied to all file types)
 [*]
-BasedOnStyles = Vale, Custom, proselint
+BasedOnStyles = Vale, Custom, proselint, write-good
 
 Google.Contractions = NO
 # Markdown files
 [*.{md,mdown,markdown,markdn}]
-BasedOnStyles = Vale, Custom, Google, proselint
+BasedOnStyles = Vale, Custom, Google, proselint, write-good
 
 # HTML files
 [*.{html,htm,shtml,xhtml}]
-BasedOnStyles = Vale, Custom, Google, proselint
+BasedOnStyles = Vale, Custom, Google, proselint, write-good
 
 # Code files
 [*.{c,h,cs,csx,cpp,cc,cxx,hpp,go,hs,java,bsh,js,jl,less,lua,pl,pm,pod,php,ps1,proto,py,py3,pyw,pyi,rpy,r,R,rb,rs,sass,scala,sbt,swift,ts,tsx}]
-BasedOnStyles = Vale, Custom, Google, proselint
+BasedOnStyles = Vale, Custom, Google, proselint, write-good
 CommentOnly = true
 
 # For ignoring specific directories
