--- a/styles/Custom/WATcloud.yml
+++ b/styles/Custom/WATcloud.yml
@@ -2,9 +2,9 @@ extends: existence
 message: "Use either 'WATcloud' or 'watcloud' for correct brand capitalization."
 level: error
 tokens:
-  - '(?i)wat ?cloud(?!(''s|\b))'
+  - '(?i)wat ?cloud'
 exceptions:
   - WATcloud
   - watcloud
-  - WATcloud's
-  - watcloud's
+
+  
