--- a/styles/Custom/WATonomous.yml
+++ b/styles/Custom/WATonomous.yml
@@ -2,7 +2,7 @@ extends: existence
 message: "Use either 'WATonomous' or 'watonomous' for correct brand capitalization."
 level: error
 tokens:
-- '(?i)wat ?onomous'
+- '(?i)wat ?ono876s'
 exceptions:
 - WATonomous
 - watonomous
